manifests/deb-slim.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deb-slim
  namespace: hermes-lair
spec:
  selector:
    matchLabels:
      app: deb-slim
  serviceName: "deb-slim"
  replicas: 1
  template:
    metadata:
      labels:
        app: deb-slim
    spec:
      containers:
      - name: deb-slim
        image: a1abeachbum/deb-slim-ssh@sha256:3b986acd9a152079788dcb5f13630b69ebe42497a04e073054545204f94b83fc
        ports:
          - containerPort: 22
        volumeMounts:
          - name: hermes-data
            mountPath: /home/hermes-agent/vault
            subPath: vaults
          - name: hermes-data
            mountPath: /home/hermes-agent/data
            subPath: data
      volumes:
        - name: hermes-data
          persistentVolumeClaim:
            claimName: hermes-data
