manifests/hermes-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hermes
  name: hermes
  namespace: hermes-lair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hermes
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hermes
    spec:
      affinity:
         podAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 100
               podAffinityTerm:
                 labelSelector:
                   matchExpressions:
                     - key: app
                       operator: In
                       values:
                         - obsidian
                 topologyKey: kubernetes.io/hostname
      containers:
      - image: a1abeachbum/hermes-kubectl@sha256:f3a6ca7f6dbba6beb81281d89c3fb56d776649af055e851d9d5044c3a32c755c
        name: hermes-kubectl
        volumeMounts:
        - name: hermes-data
          mountPath: /opt/data
        - name: ssh-key
          mountPath: /etc/hermes-ssh
          readOnly: true
        args:
          - "gateway"
          - "run"
      volumes:
      - name: hermes-data
        persistentVolumeClaim:
          claimName: hermes-data
      - name: ssh-key
        secret:
          secretName: hermes-ssh-key
          defaultMode: 0440
      securityContext:
        fsGroup: 10000
