manifests/llama.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llama-farm
  labels:
    purpose: hermes-llama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: llama-cpp
  name: llama-cpp
  namespace: llama-farm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-cpp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: llama-cpp
    spec:
      containers:
      - image: ghcr.io/ggml-org/llama.cpp:server-vulkan
        imagePullPolicy: IfNotPresent
        name: llama-cpp
        volumeMounts:
          - name: models
            mountPath: /models
        args:
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "8000"
          - "-hf"
          - "ggml-org/gemma-4-26b-a4b-it-GGUF:Q4_0"
          - "--jinja"
          - "-ngl"
          - "99"
          - "-np"
          - "1"
          - "-fa"
          - "on"
          - "-c"
          - "98304"
          - "-ctk"
          - "q8_0"
          - "-ctv"
          - "q8_0"
        ports:
        - containerPort: 8000
        resources:
          limits:
            amd.com/gpu: 1
          requests:
            amd.com/gpu: 1
      volumes:
        - name: models
          persistentVolumeClaim:
             claimName: models
---
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp
  namespace: llama-farm
spec:
  type: NodePort
  selector:
    app: llama-cpp
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
      nodePort: 32000
