manifests/obsidian.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: obsidian
  name: obsidian
  namespace: hermes-lair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      affinity:
         podAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 100
               podAffinityTerm:
                 labelSelector:
                   matchExpressions:
                     - key: app
                       operator: In
                       values:
                         - hermes
                 topologyKey: kubernetes.io/hostname
      containers:
      - image: linuxserver/obsidian@sha256:12765934732c9e7ed7f8b0901003f1e65ec41a6d6c82645f74d9606fae6c94ed
        name: obsidian
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: hermes-data
            mountPath: /config
            subPath: obsidian-config
          - name: hermes-data
            mountPath: /config/vaults
            subPath: vaults
          - name: dshm
            mountPath: /dev/shm
        ports:
        - containerPort: 3001
          name: https
      volumes:
        - name: hermes-data
          persistentVolumeClaim:
            claimName: hermes-data
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-nodeport
  namespace: hermes-lair
spec:
  type: NodePort
  selector:
    app: obsidian
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 32300
      protocol: TCP
