manifests/obsidian-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-ingress
  namespace: hermes-lair
  annotations:
    cert-manager.io/cluster-issuer: cf-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - obsidian.<your_domain>.com
    secretName: obsidian-tls
  rules:
  - host: obsidian.<your_domain>.com
    http:
      paths:
      - backend:
          service:
            name: obsidian-serve
            port:
              number: 3001
        path: /
        pathType: Prefix
